src/app/common/header/navigation/navigation.component.scss
@import "../../../../assets/scss/_variables";
@import "../../../../assets/scss/_mixins";
@import "../../../../assets/scss/_responsive";


.navigation {

    &__checkbox {
        display: none;
    }

    &__button {
        height: 7rem;
        width: 7rem;
        border-radius: 50%;
        position: relative;
        top: .4rem;
        right: 0;
        z-index: 12;
        box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
        text-align: center;
        cursor: pointer;

        @include respond(small) {
            display: none;
        }
    }

    &__background {
        height: 1px;
        width: 100vw;
        position: absolute;
        top: 0;
        left: 0;
        background: $color-primary;
        background: linear-gradient(180deg, rgba(63,81,181,1) 0%, rgba(101,115,195,1) 100%);
        z-index: 10;
        transition: all 0.8s cubic-bezier(0.86, 0, 0.77, 1);

        @include respond(small) {
            display: none;
        }
    }

    &__nav {
        height: 100vh;
        position: fixed;
        top: 20vh;
        left: -100rem;
        z-index: 15;
        width: 0;
        opacity: 0;
        transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);

        @include respond(small) {
            height: auto;
            opacity: 1;
            position: static;
            width: 100%;
        }
    }

    &__list {
        list-style: none;
        text-align: center;
        width: 100%;

        @include respond(small) {
            display: flex;
            justify-content: space-around;
        }
    }

    &__item {
        margin: 1rem;
        cursor: pointer;
        outline: none;

        @include respond(small) {
            margin: 0;
            padding: 1rem;

            &:hover {
                transform: none;
            }
        }
    }

    &__link {
        display: inline-block;
        font-size: 2rem;
        font-weight: 300;
        padding: 1rem 2rem;
        color: $color-white;
        text-decoration: none;
        text-transform: uppercase;
        background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
        background-size: 230%;
        transition: all 0.4s;

        & span {
            margin-left: 1rem;
        }

        @include respond(small) {
            padding: 0 2rem;

            & span {
                display: none;
            }
        }

        &:hover,
        &:active {
            background-position: 100%;
            color: $color-primary;
            transform: translateX(1rem);
        }

        @include respond(small) {
            &:hover {
                transform: none;
                background-position: 0 0;
            }
        }
    }

    &__checkbox:checked ~ &__background {
        height: 100vh;
    }

    &__checkbox:checked ~ &__nav {
        width: 100vw;
        opacity: 1;
        left: 0;
    }

    &__checkbox:checked + &__button {
        background-color: transparent;
    }
}

.active-route {
    background-position: 100%;
    color: $color-primary;
    transform: translateX(1rem);

    @include respond(small) {
        border-radius: 10px;
        transform: none;
    }
}

